--- a/Backend/RAGChatbot.API/appsettings.json
+++ b/Backend/RAGChatbot.API/appsettings.json
@@ -9,7 +9,7 @@
   "OpenAI": {
     "ApiKey": "your-openai-api-key-here",
     "EmbeddingModel": "text-embedding-3-small",
-    "ChatModel": "gpt-4"
+    "ChatModel": "gpt-4-turbo-preview"
   },
   "Gemini": {
     "ApiKey": "your-gemini-api-key-here",
